# llm-debate

./: .gitignore  README.md  pyproject.toml
probes/: common.py  probe_failure.py  probe_judge.py  probe_participant.py
probes/fixtures/: claude_participant.json  claude_participant_stream.json  codex_participant_json.json  codex_participant_last.json  fail_claude_badflag.json  fail_claude_timeout.json  fail_codex_badflag.json  judge_claude.json
src/llm_debate/: __init__.py  adapters.py  cli.py  export_langfuse.py  judge.py  machine.py  messages.py  mocks.py  retry.py  runlog.py  sanitize.py  types.py
src/llm_debate/ui/: __init__.py  server.py
src/llm_debate/ui/static/: app.js  index.html  styles.css
tests/: conftest.py  test_export_langfuse.py  test_judge.py  test_machine.py  test_messages.py  test_parsers.py  test_retry.py  test_runlog.py  test_sanitize.py  test_ui_server.py
